gccida/g0/scope_die_for
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scope_die_for/src/dwarf2out.c:10035:46: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( containing_scope && containing_scope[1] == 38 ) 
                         ~~~~~~~~~~~~~~~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scope_die_for/src/dwarf2out.c:10037:46: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( containing_scope && containing_scope[1] == 23 ) 
                         ~~~~~~~~~~~~~~~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scope_die_for/src/dwarf2out.c:10047:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE && ( *( ( _BYTE *)&containing_scope[1] + 1) & 0x40) == 0 ) 
                    ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scope_die_for/src/obj/dwarf2out.o] Error 1
